Added frontend url

--- a/app.properties
+++ b/app.properties
@@ -1,2 +1,2 @@
-frontend.url = http://example.com
+frontend.url = https://dru94.github.io/scovid/
 backend.rest = https://jsonplaceholder.typicode.com/todos
